--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "bootstrap": "^5.1.3",
+    "react": "17.0.0",
+    "react-bootstrap": "^2.2.3",
+    "react-dom": "17.0.0",
+    "react-query": "^3.34.19",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-table": "^7.7.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
