--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "react": "17.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "17.0.0",
@@ -55,6 +57,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0"
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "sass": "^1.50.0"
   }
 }
