--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "install": "^0.13.0",
+    "node-sass": "^7.0.1",
+    "normalize.css": "^8.0.1",
+    "npm": "^8.6.0",
     "react": "17.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "17.0.0",
@@ -48,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-table": "^7.7.10",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^8.13.0",
